# charbrowser

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINING.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: AGENTS.md  MAINTAINING.md  comfyui-setup.md
docs/comfyui_api/: anima_api.json  flux_api.json  flux_runpod_api.json  qwen_api.json  zit_api.json
public/: LICENSE  third-party-licenses.json
scripts/: benchmark-folder-filters.mjs  generate-licenses.mjs
src/: constants.js  dom.js  init.js  main.js  state.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: app_data.rs  llm_history.rs  main.rs  metadata.rs
src-tauri/src/commands/: browser.rs  comfyui.rs  embedded.rs  files.rs  llm.rs  mod.rs  system.rs
src-tauri/src/metadata/: audio.rs  embedded.rs  fits.rs  image.rs  mod.rs  types.rs  utils.rs  video.rs
src/services/: assistant-service.js  comfyui-service.js  filter-service.js  llm-service.js  metadata-service.js  settings-service.js  tauri-api.js  thumbnail-service.js
src/styles/: base.css  card-editor.css  dialogs-responsive.css  metadata-json.css  preview.css  sidebar.css  toolbar-assistant.css  workspace.css
src/ui/: assistant.js  card-editor.js  drag-drop.js  embedded-json.js  (+9 more)
(+22 files in other folders)
