[package]
name = "charbrowser"
version = "0.2.0"
description = "A desktop application to display metadata from images, videos, and audio files"
license = "MIT"
authors = ["LazyGonk"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", features = ["tiff"] }
id3 = "1.13"
png = "0.17"
base64 = "0.22"
crc32fast = "1"
flate2 = "1"
kamadak-exif = "0.6"
webbrowser = "1"
reqwest = { version = "0.12", features = ["json"] }
demosaic = "0.3"
trash = "3.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
